--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.3"
+    "react-router": "^3.2.1",
+    "react-scripts": "2.1.3",
+    "es6-base-servicos": "git+https://jenkins:t$yjrzs$@git.thema.inf.br/es6-base-servicos.git"
   },
   "scripts": {
     "start": "react-scripts start",
